# post_web

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  README.md  README.zh-CN.md  docker-compose.yml  dsetkit-0.3.1-py3-none-any.whl  pyproject.toml  操作指南.md
.github/workflows/: release.yml
backend/: Dockerfile  launcher.py  requirements.txt
backend/app/: factory.py
backend/app/api/: router.py
backend/app/core/: config.py  logging.py  middleware.py
backend/app/schemas/: dsetkit.py  field_schema.py  image_browser.py  pipeline_tester.py  visualization.py
backend/pipeline_core/: __init__.py  registry.py
backend/tools/: __init__.py  config.py  dump.py  eval.py  main.py  plot.py  plot_anno.py  post.py
backend/wheels/: dsetkit-0.4.0-py3-none-any.whl  dsetkit-0.4.1-py3-none-any.whl
data/: groups.json
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.vue  styles.css
frontend/src/styles/: base.css  (+6 more)
scripts/: manage.sh  migrate_pipeline_data.py
scripts/linux/: README.md  assemble_portable.sh  build_frontend.sh  common.sh  install_dependencies.sh  manage.sh  prepare_release_assets.sh  release.sh
scripts/macos/: assemble_portable.sh  build_backend_executable.sh  build_portable.sh  common.sh
scripts/windows/: assemble_portable.ps1  build_backend_executable.ps1  build_frontend.ps1  build_portable.ps1  common.ps1  install_dependencies.ps1  prepare_release_assets.ps1  release.ps1
web/: .env.example  .gitignore  README.md  docker-compose.yml  requirements.txt
web/frontend/: Dockerfile  nginx.conf  vite.config.js
(+78 files in other folders)
