[project]
name = "web-post"
version = "0.1.0"
description = "Local workspace file browser and pipeline testing app"
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "loguru>=0.7,<1",
  "natsort>=8,<9",
  "opencv-python>=4.8,<5",
  "requests>=2.32,<3",
  "dsetkit==0.4.0",
]

[dependency-groups]
release = [
  "pyinstaller>=6,<7",
]

[tool.uv]
package = false

[tool.uv.sources]
dsetkit = { path = "backend/wheels/dsetkit-0.4.0-py3-none-any.whl" }

